Add WaterConfig State

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_extra_dirs = ~/Documents/Arduino/libraries
 lib_deps = 
 	jandelgado/JLed@^4.13.1
 	northernwidget/DS3231@^1.1.2
+	mathertel/OneButton@^2.0.3
